# git-friends

./: .dockerignore  .git-friends.profile  .gitignore  Cargo.toml  Dockerfile  GITHUB_ACTIONS.md  PROJECT_SUMMARY.md  README-docker.md  README-environ-hooks.md  README-quadlet.md  README-release.md  README.md  TESTING.md  WORKFLOW-MODERNIZATION.md  action.yml  debug-message-flow.sh  diagnose-hook.sh  docker-compose.prod.yml  docker-compose.yml  docker-manage.sh  example-post-commit  example-post-commit-environ  git-friends.toml.example  github-git-friends-example-workflow.yml  install-gf-hook.sh  install-hook-environ.sh  quadlet-manage.sh  release.sh  test-client-ids.sh  test-config.toml  validate-workflow.sh
.github/workflows/: rust-ci.yml
docker/config/: git-friends.toml
docker/mosquitto/: mosquitto.conf
quadlet/: git-friends-irc-prod.container  git-friends-irc.container  git-friends-logs.volume  git-friends-mqtt-prod.container  git-friends-mqtt.container  git-friends-network.network  git-friends-server-prod.container  git-friends-server.container  git-friends-tester.container  mosquitto-data.volume  mosquitto-log.volume
src/: auth.rs  config.rs  errors.rs  git.rs  lib.rs  mqtt.rs
